<resources>
    <string name="app_name">Test_aegean_app</string>

    <string name="hello">Καλώς ήλθατε!</string>
    <string name="action_settings">Settings</string>
    <string name="button1">Μηχανικών ΠΛηροφοριακών και Επικοινωνιακών Συστημάτων</string>
    <string name="button2">Στατιστικής και Αναλογιστικών - Χρηματοοικονομικών Μαθηματικών</string>
    <string name="button3">Μαθηματικών</string>
    <string name="title_activity_icsd_page">I.S.C.D</string>

    <string name="Text_ICSD">Aegean University at Samos</string>
    <string name="strPage">Αρχική Σελίδα</string>
    <string name="srchPage">Search</string>
    <string name="schedl">ΠΡΟΓΡΑΜΜΑ</string>
    <string name="title_activity_sitisi">Sitisi</string>

    <string name="sitisi">Πρόγραμμα Σίτισης</string>
    <string name="ok">OK</string>
    <string name="title_activity_proti_ebdomada_brady">proti_ebdomada_brady</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_proti_ebdomada_mesimeri">proti_ebdomada_mesimeri</string>
    <string name="title_activity_saxm_page">saxm_page</string>
    <string name="title_activity_math_page">math_page</string>
</resources>
