<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/statistics"
    tools:context="com.example.george.test_aegean_app.saxm_page">
    <TextView
        android:text="@string/Text_ICSD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textStyle="bold"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mεταπτυχιακό"
        android:id="@+id/PostGradBtn"
        android:layout_above="@+id/schedule"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/Search"
        android:layout_alignEnd="@+id/Search"
        android:onClick="MscClick"
        android:alpha="0.7"
        android:foreground="#000000"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Academaic Calendar"
        android:id="@+id/Icsd_calendar"
        android:layout_above="@+id/PostGradBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/PostGradBtn"
        android:layout_alignEnd="@+id/PostGradBtn"
        android:alpha="0.7"
        android:foreground="#000000"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Eudoxus"
        android:id="@+id/EudoxusBtn"
        android:layout_above="@+id/Icsd_calendar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/Icsd_calendar"
        android:layout_alignEnd="@+id/Icsd_calendar"
        android:onClick="eudoxusClick"
        android:alpha="0.7"
        android:foreground="#000000"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Σύστημα Ενημέρωσης Φοιτητών"
        android:id="@+id/IcarusBtn"
        android:onClick="icarusClick"
        android:layout_above="@+id/EudoxusBtn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:alpha="0.7"
        android:foreground="#000000"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="e-Mail"
        android:id="@+id/mailBtn"
        android:layout_above="@+id/IcarusBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/IcarusBtn"
        android:layout_alignEnd="@+id/IcarusBtn"
        android:onClick="mailClick"
        android:alpha="0.7"
        android:foreground="#000000"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="e-Class"
        android:id="@+id/eclassBtn"
        android:layout_above="@+id/mailBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/mailBtn"
        android:layout_alignEnd="@+id/mailBtn"
        android:onClick="eclassClick"
        android:alpha="0.7"
        android:foreground="#000000"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strPage"
        android:id="@+id/start_page"
        android:onClick="startPageClick"
        android:clickable="true"
        android:layout_above="@+id/eclassBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="41dp"
        android:textStyle="bold"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/srchPage"
        android:id="@+id/Search"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="searchPageClick"
        android:clickable="true"
        android:nestedScrollingEnabled="true"
        android:layout_alignTop="@+id/start_page"
        android:textStyle="bold"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedl"
        android:id="@+id/schedule"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/PostGradBtn"
        android:layout_alignEnd="@+id/PostGradBtn"
        android:onClick="scheduleClick"
        android:alpha="0.7"
        android:foreground="#000000"
        android:textColor="#000000"
        android:textStyle="bold"/>
</RelativeLayout>
